# lyrike-studio

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.js  extract_lyrics.py  index.html  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: ai-editor-context.agent.md
backend/: .dockerignore  Dockerfile  extract_lyrics.py  fly.toml  main.py  pyproject.toml
backend/core/: config.py  models.py  rate_limit.py  utils.py
backend/routes/: cache_proxy.py  local_api.py  lrclib_proxy.py
backend/services/: audio_service.py  cdn_service.py  lyrics_refinement_service.py  lyrics_service.py  metadata_service.py  transcription_service.py
backend/services/transcription/: __init__.py  base.py  factory.py  formatter.py  openai_whisper_service.py  types.py  whisperx_service.py
backend/tests/: test_local_api_peaks_cache.py  test_transcription_formatter.py  test_transcription_service_mode.py  test_utils.py
docs/: AI_CONTEXT.md  ARCHITECTURE.md  GLOSSARY.md
docs/specs/: 001-layout-shell.md  002-media-pipeline.md  003-waveform-editor.md  004-lyrics-core.md  005-publish-migration.md  _template.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.svelte  styles.css
frontend/src/components/: LyricLineItem.svelte  LyricRegionsTrack.svelte  LyricsPanel.svelte  MobileTabs.svelte  SourcePanel.svelte  TimelinePanel.svelte  VideoPlayer.svelte
frontend/src/lib/: LyricsStore.ts  MediaController.ts  WaveformController.ts  config.ts  lrc.ts  lyricsTimeline.ts
lyrike-studio/: DESIGN.md  next.config.ts  package-lock.json  package.json  plan.md  pnpm-lock.yaml  proxy.ts  refactor-plan-v2.md  tsconfig.node-test.json
lyrike-studio/app/: globals.css  layout.tsx  page.tsx  providers.tsx
lyrike-studio/app/[locale]/: layout.tsx
lyrike-studio/entities/lyrics/: index.ts  types.ts
lyrike-studio/lib/: LyricsStore.ts  WaveformController.ts  api.test.ts  api.ts  config.ts  lrc.test.ts  lrc.ts  lyricsTimeline.ts
(+187 files in other folders)
