[project]
name = "lrclib-publisher"
version = "0.1.0"
description = "YouTube Lyrics Extractor using WhisperX + LRCLIB API"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "yt-dlp>=2024.12.0",
    "python-multipart>=0.0.12",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
]
cuda = [
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
]

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperx.git" }

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 88