[project]
name = "lrclib-publisher"
version = "0.1.0"
description = "YouTube Lyrics Extractor using WhisperX + LRCLIB API"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "yt-dlp>=2024.12.0",
    "python-multipart>=0.0.12",
    "numpy>=1.21.0",
    "torch==2.8.0",
    "torchaudio==2.8.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperx.git" }
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = []

[tool.ruff]
line-length = 88