[project]
name = "lrclib-publisher"
version = "0.1.0"
description = "YouTube Lyrics Extractor using OpenAI Whisper API"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "yt-dlp",
    "python-multipart>=0.0.12",
    "numpy>=1.21.0",
    "python-dotenv>=1.0.0",
    "openai>=2.33.0",
    "slowapi>=0.1.9",
    "boto3>=1.35.0",
]

[tool.ruff]
line-length = 88